v 1.0.4
Added an option to use async generators as service processors

v 1.0.3
Implemented dynamic routing key and other message params
Added example of splitter service
Project was renamed into `Mela`
First release on GitHub and PyPI

v 1.0.2
Bumped version of aio-pika from 6.7.1 up to 6.8.0
Replaced PyYAML with envyaml

v 1.0.1
Added an ability to cancel message consuming.

v 1.0.0
First async release

v 0.1.8
Added optional timeout parameter to Mela.run()

v 0.1.7
Added possibility to realize `splitter` pattern (https://www.enterpriseintegrationpatterns.com/patterns/messaging/Sequencer.html)
See `example_splitter.py` for more details

v 0.1.6a0
Changed connection processing

v 0.1.5
Fixed spamming connections bug

v 0.1.4
Draining events forever

v 0.1.3
Added possibility to reject message in service decorator.

v 0.1.2
Changed execution method according to Kombu documentation about multiple consumers
Added GitLab CI integration.
Added changelog