@@ -1,5 +1,6 @@
 v 1.0.4
 Added an option to use async generators as service processors
+Added support of different exchange types
 
 v 1.0.3
 Implemented dynamic routing key and other message params
